--- a/src/sass/objects/_box.scss
+++ b/src/sass/objects/_box.scss
@@ -12,8 +12,9 @@
     
     &__benefits {
         [class^="icon-"] {
-            @extend %flex;
-            @extend %flex-xy;
+            //@extend %flex;
+            //@extend %flex-xy;
+            text-align: center;
             width: 16px; height: 16px;
             background-color: $c-black-01;
             border-radius: 50%;
