--- a/src/sass/settings/_global.scss
+++ b/src/sass/settings/_global.scss
@@ -1,6 +1,6 @@
 // Fonts
 
-$helvetica:         'Helvetica', sans-serif;
+$helvetica:         'helvetica', sans-serif;
 $icomoon:           'icomoon';
 $mont:		        'Montserrat', sans-serif;
 $open:              'Open Sans', sans-serif;
