--- a/src/sass/elements/_fonts.scss
+++ b/src/sass/elements/_fonts.scss
@@ -1,1 +1,3 @@
 @include font-face-db( "icomoon", "icomoon", normal);
+@include font-face-db( "helvetica", "helvetica-regular", $regular);
+@include font-face-db( "helvetica", "helvetica-bold", $bold);
