--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -15,9 +15,10 @@
             &.menu-item-has-hover-children {
 
                 & > ul {
+                    @extend %rel;
+
                     & > li {
                         &:hover {
-                            
                             
                             cursor: pointer;
                         
@@ -33,10 +34,7 @@
                                     pointer-events: auto;
                                     transform: scale(1) translateY(0);
                                 }
-                                
-                                //display: block;
                             }
-
                         }
                     }
                 }
@@ -50,9 +48,8 @@
                 
                 & > li {
                     @extend %anim;
-                    @extend %rel;
                     padding-right: 20px;
-                    transform: translate3d(5px, 0, 0);
+//                    transform: translate3d(0, 0, 0);
                     opacity: 0;
                                                           
                     &:nth-child(2) {
@@ -158,7 +155,7 @@
     &__level3 {
         @extend %abs;
         //display: none;
-        left: calc(100% - 5px); top: 0;
+        left: 100%; top: 0;
         background-color: white;
         width: 390px;
         box-shadow: 0 0 26px rgba(black, .16);
